[gd_scene load_steps=4 format=3 uid="uid://b6c06betj1eqe"]

[ext_resource type="FontFile" uid="uid://cmf3h46wsvwvw" path="res://assets/fonts/Xolonium-Regular.ttf" id="1_pok65"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_thb6v"]
[ext_resource type="Texture2D" uid="uid://cmt6gmks4pjex" path="res://assets/ball.png" id="3_pd37a"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_thb6v")

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -83.0
offset_right = 146.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.932099, 0.803153)
theme_override_fonts/font = ExtResource("1_pok65")
theme_override_font_sizes/font_size = 32
text = "Let's Break Out!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseLabel" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -53.0
offset_top = -83.0
offset_right = 73.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.932099, 0.803153)
theme_override_fonts/font = ExtResource("1_pok65")
theme_override_font_sizes/font_size = 32
text = "Paused"

[node name="Score" type="Label" parent="."]
offset_left = 6.0
offset_top = 6.0
offset_right = 82.0
offset_bottom = 29.0
theme_override_fonts/font = ExtResource("1_pok65")
theme_override_font_sizes/font_size = 16
text = "Score: 0 "
horizontal_alignment = 1
vertical_alignment = 1

[node name="life_1" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(600, 20)
scale = Vector2(2, 2)
texture = ExtResource("3_pd37a")

[node name="life_2" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(580, 20)
scale = Vector2(2, 2)
texture = ExtResource("3_pd37a")

[node name="life_3" type="Sprite2D" parent="."]
modulate = Color(1, 0, 0, 1)
position = Vector2(560, 20)
scale = Vector2(2, 2)
texture = ExtResource("3_pd37a")

[node name="start" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -14.0
offset_right = 40.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_pok65")
theme_override_font_sizes/font_size = 16
text = "PLAY
"

[node name="restart" type="Button" parent="."]
visible = false
offset_right = 8.0
offset_bottom = 8.0

[connection signal="pressed" from="start" to="." method="_on_start_pressed"]
